# DeepLearning

./: .gitignore  README.md
cpp_deep_learning/deep-learning-impl/include/: Adam.h  Affine.h  BatchNormalization.h  Convolution.h  Data.h  Dropout.h  Pooling.h  Relu.h  SoftmaxWithLoss.h
cpp_deep_learning/deep-learning-impl/src/: BatchNormalization.cpp  Dropout.cpp  Mymath.cpp  Relu.cpp  Sigmoid.cpp  im2col.cpp
cpp_deep_learning/deep-learning-impl/src/proto/: Leek.proto
cpp_deep_learning/deep-learning-impl/test/: Affine_test.cpp  All_test  All_test.cpp  All_test_naive  All_test_naive.cpp  Conv_test  Relu_test.cpp  axpy_test  axpy_test.cpp  blas_test  blas_test_vector  gemv_test  gemv_test.cpp  im2col_test  norm_test  random_test  random_test.cpp
cpp_deep_learning/load-mnist/src/: load_mnist.cpp
deep-learning-impl/: CMakeLists.txt
deep-learning-impl/include/: Layer.h  Mymath.h  Optimizer.h  Sigmoid.h  TwoLayerNet.h  col2im.h  im2col.h
deep-learning-impl/src/: Adam.cpp  Affine.cpp  Convolution.cpp  Pooling.cpp  SoftmaxWithLoss.cpp  TwoLayerNet.cpp  col2im.cpp
deep-learning-impl/test/: Affine_test  Conv_test.cpp  Relu_test  Train_net  Train_net.cpp  blas_test.cpp  gradient_check  gradient_check.cpp  im2col_test.cpp  norm_test.cpp  shared_test.cpp
load-mnist/src/: load_mnist.h
pytorch_deep_learning/: cifar_net.pth  torch_custom_dataload.py  torch_tuto_nn.py  torch_tuto_test_net.py  torchvision_test.py
pytorch_deep_learning/models/: resnet.py
